--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                 <color key="backgroundColor" name="ypBlack"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="gray" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImagesListCell" rowHeight="241" id="GP0-fH-9aL" customClass="ImagesListCell" customModule="ImageFeed" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImagesListCell" rowHeight="241" id="GP0-fH-9aL" customClass="ImagesListCell" customModule="ImageFeed" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="393" height="241"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GP0-fH-9aL" id="x41-pN-BZp">
@@ -46,7 +46,7 @@
                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                     <state key="normal" image="Active"/>
                                                 </button>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LR7-dX-RoN" userLabel="GradientImageView">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gradientCell" translatesAutoresizingMaskIntoConstraints="NO" id="LR7-dX-RoN" userLabel="GradientImageView">
                                                     <rect key="frame" x="16" y="207" width="361" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="icl-xn-3Ur"/>
@@ -62,6 +62,7 @@
                                             <constraints>
                                                 <constraint firstItem="LR7-dX-RoN" firstAttribute="leading" secondItem="cml-fv-es2" secondAttribute="leading" id="DOe-l9-7j4"/>
                                                 <constraint firstItem="cml-fv-es2" firstAttribute="trailing" secondItem="LR7-dX-RoN" secondAttribute="trailing" id="I2K-hj-9BI"/>
+                                                <constraint firstItem="cml-fv-es2" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="jdN-ug-auL" secondAttribute="trailing" constant="8" id="LJy-O5-rLu"/>
                                                 <constraint firstItem="cml-fv-es2" firstAttribute="bottom" secondItem="jdN-ug-auL" secondAttribute="bottom" constant="8" id="QrK-aZ-WMn"/>
                                                 <constraint firstAttribute="bottom" secondItem="cml-fv-es2" secondAttribute="bottom" constant="4" id="WmM-LA-BzN"/>
                                                 <constraint firstAttribute="trailing" secondItem="cml-fv-es2" secondAttribute="trailing" constant="16" id="ZnL-NW-wo1"/>
@@ -107,6 +108,7 @@
     </scenes>
     <resources>
         <image name="Active" width="30" height="27.333333969116211"/>
+        <image name="gradientCell" width="343" height="30"/>
         <namedColor name="ypBlack">
             <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
