--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="GuU-sY-0KN">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -14,22 +14,22 @@
             <objects>
                 <viewController title="ImageList" id="BYZ-38-t0r" customClass="ImagesListViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="35B-Li-gRE">
-                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" name="ypBlack"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImagesListCell" rowHeight="241" id="GP0-fH-9aL" customClass="ImagesListCell" customModule="ImageFeed" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="241"/>
+                                        <rect key="frame" x="0.0" y="50" width="414" height="241"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GP0-fH-9aL" id="x41-pN-BZp">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="241"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="241"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cml-fv-es2" userLabel="CellImage">
-                                                    <rect key="frame" x="16" y="4" width="361" height="233"/>
+                                                    <rect key="frame" x="16" y="4" width="382" height="233"/>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                             <integer key="value" value="16"/>
@@ -38,7 +38,7 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </imageView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9dT-Nx-4mh" userLabel="LikeButton">
-                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
+                                                    <rect key="frame" x="354" y="4" width="44" height="44"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="44" id="KVe-tk-3Od"/>
                                                         <constraint firstAttribute="width" constant="44" id="smC-Fj-UtO"/>
@@ -47,7 +47,7 @@
                                                     <state key="normal" image="Active"/>
                                                 </button>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rectangle" translatesAutoresizingMaskIntoConstraints="NO" id="LR7-dX-RoN" userLabel="GradientImageView">
-                                                    <rect key="frame" x="16" y="207" width="361" height="30"/>
+                                                    <rect key="frame" x="16" y="207" width="382" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="icl-xn-3Ur"/>
                                                     </constraints>
@@ -105,12 +105,100 @@
             </objects>
             <point key="canvasLocation" x="-19.083969465648853" y="3.5211267605633805"/>
         </scene>
+        <!--Is Initial View Controller-->
+        <scene sceneID="ix2-Kw-QfM">
+            <objects>
+                <viewController title="Is Initial View Controller" id="GuU-sY-0KN" customClass="ProfileViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YVP-zS-XHI">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" translatesAutoresizingMaskIntoConstraints="NO" id="66y-XJ-O3u" userLabel="Avatar Image View">
+                                <rect key="frame" x="16" y="76" width="70" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="uFI-68-zuw"/>
+                                    <constraint firstAttribute="width" constant="70" id="uVQ-fI-4Ip"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="16"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PWQ-Zs-Wgo" userLabel="Log Out Button">
+                                <rect key="frame" x="358" y="89" width="44" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="usQ-RO-IYa"/>
+                                    <constraint firstAttribute="width" constant="44" id="zLv-hu-fnt"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="Exit"/>
+                                <connections>
+                                    <action selector="didTapLogoutButton:" destination="GuU-sY-0KN" eventType="touchUpInside" id="lB8-HI-xxk"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Екатерина Новикова" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DkL-jz-RPI" userLabel="Name Label">
+                                <rect key="frame" x="16" y="154" width="382" height="27"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="23"/>
+                                <color key="textColor" name="ypWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@ekaterina_nov" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LFe-iS-veu" userLabel="Login Name Label">
+                                <rect key="frame" x="16" y="189" width="382" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" name="ypGray"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello, world!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ePN-CA-GuN" userLabel="Description Label">
+                                <rect key="frame" x="16" y="213" width="382" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" name="ypWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="jqx-ut-bmC"/>
+                        <color key="backgroundColor" name="ypBlack"/>
+                        <constraints>
+                            <constraint firstItem="66y-XJ-O3u" firstAttribute="top" secondItem="YVP-zS-XHI" secondAttribute="top" constant="76" id="128-3o-LrO"/>
+                            <constraint firstItem="DkL-jz-RPI" firstAttribute="trailing" secondItem="LFe-iS-veu" secondAttribute="trailing" id="40g-Wp-zI2"/>
+                            <constraint firstItem="PWQ-Zs-Wgo" firstAttribute="top" secondItem="YVP-zS-XHI" secondAttribute="top" constant="89" id="MwK-pX-w1A"/>
+                            <constraint firstItem="DkL-jz-RPI" firstAttribute="top" secondItem="66y-XJ-O3u" secondAttribute="bottom" constant="8" id="ShH-3k-Fna"/>
+                            <constraint firstItem="ePN-CA-GuN" firstAttribute="top" secondItem="LFe-iS-veu" secondAttribute="bottom" constant="8" id="Uh3-5u-T8P"/>
+                            <constraint firstItem="LFe-iS-veu" firstAttribute="leading" secondItem="66y-XJ-O3u" secondAttribute="leading" id="W09-6O-5Qi"/>
+                            <constraint firstItem="66y-XJ-O3u" firstAttribute="leading" secondItem="YVP-zS-XHI" secondAttribute="leading" constant="16" id="YUb-4n-8rt"/>
+                            <constraint firstItem="LFe-iS-veu" firstAttribute="top" secondItem="DkL-jz-RPI" secondAttribute="bottom" constant="8" id="cRm-Vm-5xW"/>
+                            <constraint firstAttribute="trailing" secondItem="DkL-jz-RPI" secondAttribute="trailing" constant="16" id="cuN-vA-xb7"/>
+                            <constraint firstItem="ePN-CA-GuN" firstAttribute="leading" secondItem="66y-XJ-O3u" secondAttribute="leading" id="dZn-aM-lMB"/>
+                            <constraint firstItem="DkL-jz-RPI" firstAttribute="leading" secondItem="66y-XJ-O3u" secondAttribute="leading" id="lWV-Z1-cMj"/>
+                            <constraint firstItem="DkL-jz-RPI" firstAttribute="trailing" secondItem="ePN-CA-GuN" secondAttribute="trailing" id="n5a-ip-Ebz"/>
+                            <constraint firstItem="PWQ-Zs-Wgo" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="66y-XJ-O3u" secondAttribute="trailing" id="vyO-Hl-XrY"/>
+                            <constraint firstItem="jqx-ut-bmC" firstAttribute="trailing" secondItem="PWQ-Zs-Wgo" secondAttribute="trailing" constant="12" id="yzS-UZ-UAj"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="avatarImageView" destination="66y-XJ-O3u" id="yj9-dc-9zQ"/>
+                        <outlet property="descriptionLabel" destination="ePN-CA-GuN" id="VPk-9w-eIe"/>
+                        <outlet property="loginNameLabel" destination="LFe-iS-veu" id="5cI-cJ-LNL"/>
+                        <outlet property="logoutButton" destination="PWQ-Zs-Wgo" id="cFz-Kd-iuR"/>
+                        <outlet property="nameLabel" destination="DkL-jz-RPI" id="2k6-eT-Tx0"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kUP-aW-3Ra" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-872" y="3"/>
+        </scene>
     </scenes>
     <resources>
-        <image name="Active" width="30" height="27.333333969116211"/>
+        <image name="Active" width="44" height="44"/>
+        <image name="Exit" width="44" height="44"/>
+        <image name="photo" width="70" height="70"/>
         <image name="rectangle" width="288" height="30"/>
         <namedColor name="ypBlack">
             <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="ypGray">
+            <color red="0.68199998140335083" green="0.68599998950958252" blue="0.70599997043609619" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="ypWhite">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
