--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tXJ-rB-KB3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8cL-mS-yKE">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -82,7 +82,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nfz-nZ-PYd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1185.4961832061069" y="-1830.2816901408451"/>
+            <point key="canvasLocation" x="-260.30534351145036" y="-1830.2816901408451"/>
         </scene>
         <!--Web View View Controller-->
         <scene sceneID="hGx-dB-vcD">
@@ -112,7 +112,7 @@
                                     <action selector="didTapBackButton:" destination="Ool-x5-oCq" eventType="touchUpInside" id="RNX-pI-XfG"/>
                                 </connections>
                             </button>
-                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="4aE-Sq-do3">
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.01" translatesAutoresizingMaskIntoConstraints="NO" id="4aE-Sq-do3">
                                 <rect key="frame" x="0.0" y="103" width="393" height="4"/>
                                 <color key="progressTintColor" name="ypBlack"/>
                             </progressView>
@@ -138,7 +138,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oLL-aG-MtN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-69.465648854961827" y="-1830.2816901408451"/>
+            <point key="canvasLocation" x="857.25190839694653" y="-1830.2816901408451"/>
         </scene>
         <!--ImageList-->
         <scene sceneID="tne-QT-ifu">
@@ -327,6 +327,49 @@
             </objects>
             <point key="canvasLocation" x="-872" y="3"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="qOb-iu-Lt4">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4Xr-Yh-tmW" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FY5-z3-omg">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="tXJ-rB-KB3" kind="relationship" relationship="rootViewController" id="T2y-ld-9Pk"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5F9-wA-2U4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1187.0229007633586" y="-1830.2816901408451"/>
+        </scene>
+        <!--SplashViewController-->
+        <scene sceneID="jdD-ca-ApS">
+            <objects>
+                <viewController id="8cL-mS-yKE" userLabel="SplashViewController" customClass="SplashViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xEH-wT-0cf">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Vector" translatesAutoresizingMaskIntoConstraints="NO" id="pHr-NE-20J">
+                                <rect key="frame" x="159" y="387" width="75" height="78"/>
+                                <color key="backgroundColor" name="ypBlack"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="lF7-B9-cki"/>
+                        <color key="backgroundColor" name="ypBlack"/>
+                        <constraints>
+                            <constraint firstItem="pHr-NE-20J" firstAttribute="centerX" secondItem="xEH-wT-0cf" secondAttribute="centerX" id="bOG-K3-mGT"/>
+                            <constraint firstItem="pHr-NE-20J" firstAttribute="centerY" secondItem="xEH-wT-0cf" secondAttribute="centerY" id="dQv-5k-qHq"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yfg-3k-4iW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2356" y="-1830"/>
+        </scene>
     </scenes>
     <resources>
         <image name="0" width="200" height="132"/>
@@ -334,6 +377,7 @@
         <image name="LikeActive" width="44" height="44"/>
         <image name="Logo_of_Unsplash" width="60" height="60"/>
         <image name="Sharing_Button" width="50" height="50"/>
+        <image name="Vector" width="75" height="78"/>
         <image name="nav_back_button" width="9" height="15.666666984558105"/>
         <image name="rectangle" width="288" height="30"/>
         <image name="tab_editorial_active" width="30" height="30"/>
