--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -83,7 +83,7 @@
         <!--Web View View Controller-->
         <scene sceneID="hGx-dB-vcD">
             <objects>
-                <viewController id="Ool-x5-oCq" customClass="WebViewViewController" customModule="ImageFeed" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WebViewViewController" id="Ool-x5-oCq" customClass="WebViewViewController" customModule="ImageFeed" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="35L-jN-a7P">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
